[package]
name = "pust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { versino = "4.0.10", features = ["derive"]}
mockall = "0.11.2"
mockall_double = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
sudo = "0.6.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"