[package]
name = "pust"
version = "0.2.1"
authors = ["Daniyar Nurmukhamet <nurmukhametdaniyar@gmail.com>"]
license = "MIT"
description = "A simple static password generator"
readme = "README.md"
homepage = "https://github.com/nurmukhametdaniyar/pust"
repository = "https://github.com/nurmukhametdaniyar/pust"
keywords = ["cli", "password", "generator", "static"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"]}
copypasta = "0.8.1"
md5 = "0.7.0"
mockall = "0.11.2"
mockall_double = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
rpassword = "7.0.0"
sudo = "0.6.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"